# OpenGL-cube-fork

./: .gitattributes  .gitignore  CMakeLists.txt  OpenGLCube.pro  data.txt  generator.cpp  glwidget.cpp  glwidget.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.pro  widget.cpp  widget.h
release/: vertices.txt
release/make_cube/: cube.cpp  cube.h  main.cpp
